fix placement position so it doesn't overlap

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(10, 40px);
+    grid-template-columns: repeat(10, 42px);
     gap: 1px;
 }
 
@@ -15,4 +15,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.ship {
+    background-color: black;
 }
